syntax = "proto3";

package auth;

option go_package = "/authpb";

message RegisterRequest {
    string email = 1;
    string password = 2;
    string passwordConfirmation = 3;
}

message RegisterResponse {
    string msg  = 1;
}

//---------------------------

message LoginRequest {
    string email = 1;
    string password = 3;
}

message LoginResponse {
    int64 expirationTime = 1;
    string type = 2;
    string token = 3;
    string userID = 4;
}


service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
}